k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: applications
  labels:
    app.kubernetes.io/name: applications
