k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metacatalog
  namespace: applications
  labels:
    app.kubernetes.io/name: metacatalog
    app.kubernetes.io/component: application
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: metacatalog
    app.kubernetes.io/component: application
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
